# ansible-collection-macops

./: .yamllint  CHANGELOG.md  package.json  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
ansible/: galaxy.yml
ansible/roles/homebrew/tasks/: install.yml
ansible/roles/homebrew/tasks/_partials/: install-arm64.yml  install-x86.yml
ansible/roles/homebrew/tests/: test.yml
