[tool.poetry]
name = "ansible-collection-macops"
version = "1.0.0"
description = "Single repository - collection for all MacOS specific Ansible roles."
authors = ["lotyp <lotyp7@gmail.com>"]
license = "LGPLv3"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^5.8.0"

[tool.poetry.dev-dependencies]
ansible-compat = "^2.0.4"
ansible-lint = "^6.2.1"
yamllint = "^1.26.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
